Fixed formatting problem on mobile screen sizes

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -4,6 +4,7 @@
 h4{
   text-transform: capitalize;
 }
+
 .timeline {
   border-left: 3px solid #00BCD4;
   border-bottom-right-radius: 2px;
@@ -80,6 +81,15 @@ h4{
   left: -280px;
   top: 0;
 }
+
+@media screen and (max-width: 1080px) {
+/* applies only if the screen is narrower than 500px */
+  .timeline .job-meta{
+    position: static
+    left: 0px;
+  }
+  
+}
 .timeline .job-meta .title {
   font-size: 18px;
   color: #00BCD4;
@@ -138,4 +148,25 @@ h4{
   font-weight: 500;
   margin-bottom: 15px;
   font-size: 16px;
+}
+
+/* Extra small devices (phones, less than 768px) */
+@media (max-width: 991px) {
+  .timeline {
+    margin-left: 0;
+    padding-right: 0;
+  }
+  .timeline .place {
+    margin-bottom: 5px;
+  }
+  .timeline .location{
+    position: static;
+  }
+  .timeline .job-meta {
+    position: static;
+    margin-bottom: 15px;
+  }
+  .education-section .item {
+    padding: 0;
+  }
 }
